crates/rlf-macros/tests/fail/invalid_selector.rs
use rlf::rlf;

rlf! {
    card = { one: "card", other: "cards" };
    bad = "{card:nonexistent}";
}

fn main() {}
